--- a/my_solutions.css
+++ b/my_solutions.css
@@ -5,3 +5,12 @@
 .ex-1-square:hover {
     background-color: red;
 }
+
+
+.ex-2-square {
+    transition: width 2s;
+}
+
+.ex-2-square:active {
+    width: 100%;
+}
