--- a/my_solutions.css
+++ b/my_solutions.css
@@ -23,3 +23,12 @@
 .ex-3-square:hover {
     border-radius: 50%;
 }
+
+
+.ex-4-square {
+    transition: 1s;
+}
+
+.ex-4-square:hover {
+    opacity: 0;
+}
