--- a/my_solutions.css
+++ b/my_solutions.css
@@ -26,9 +26,22 @@
 
 
 .ex-4-square {
-    transition: 1s;
+    transition: opacity 1s;
 }
 
 .ex-4-square:hover {
     opacity: 0;
+}
+
+
+.ex-5-square {
+    transition: 1s;
+}
+
+.ex-5-square:hover {
+    transform: scale(2);
+}
+
+.ex-5-square:active {
+    transform: scale(.5);
 }
