--- a/my_solutions.css
+++ b/my_solutions.css
@@ -50,3 +50,12 @@
 .ex-6-img:hover {
     filter: grayscale(1);
 }
+
+
+.ex-7-img {
+    transition: filter 1s;
+}
+
+.ex-7-img:hover {
+    filter: sepia(.5) contrast(1.1); 
+}
