--- a/my_solutions.css
+++ b/my_solutions.css
@@ -59,3 +59,13 @@
 .ex-7-img:hover {
     filter: sepia(.5) contrast(1.1); 
 }
+
+
+.ex-8-img {
+    transition: 1s;
+}
+
+.ex-8-img:hover {
+    filter: saturate(.5) sepia(.5);
+    border-radius: 40px;
+}
