--- a/my_solutions.css
+++ b/my_solutions.css
@@ -69,3 +69,14 @@
     filter: saturate(.5) sepia(.5);
     border-radius: 40px;
 }
+
+
+.ex-9-img {
+    transition: 1s;
+}
+
+.ex-9-img:hover {
+    filter: saturate(.5) sepia(.5);
+    border-radius: 40px;
+    transform: scale(1.5);
+}
