--- a/my_solutions.css
+++ b/my_solutions.css
@@ -80,3 +80,18 @@
     border-radius: 40px;
     transform: scale(1.5);
 }
+
+
+.ex-10-icon {
+    animation: rotation 1.5s linear infinite;
+}
+
+@keyframes rotation {
+    0% {
+        transform: rotate(0deg)
+    }
+    100% {
+        transform: rotate(360deg)
+
+    }
+}
