--- a/my_solutions.css
+++ b/my_solutions.css
@@ -95,3 +95,20 @@
 
     }
 }
+
+
+.ex-11-icon:hover {
+    animation: brokenRotation 1.5s linear;
+}
+
+@keyframes brokenRotation {
+    0% {
+        transform: rotate(0deg)
+    }
+    80% {
+        transform: rotate(270deg)
+    }
+    100% {
+        transform: rotate(0deg);
+    }
+}
