--- a/my_solutions.css
+++ b/my_solutions.css
@@ -143,3 +143,66 @@
         right: 20%;
     }
 }
+
+
+
+
+.ex-13-button:hover .ex-13-top-white {
+    animation: moveAroundTop 2s linear;
+}
+@keyframes moveAroundTop {
+    0% {
+        left: 10%;
+        top: -10px;
+    }
+    25% {
+        left: 90%;
+        top: -10px;
+    }
+    45% {
+        left: 90%;
+        top: 95%;
+    }
+    70% {
+        left: -10%;
+        top: 95%;
+    }
+    90% {
+        left: -10%;
+        top: -10px;
+    }
+    100% {
+        left: 10%;
+        top: -10px;
+    }
+}
+
+.ex-13-button:hover .ex-13-bottom-white {
+    animation: moveAroundBottom 2s linear;
+}
+@keyframes moveAroundBottom {
+    0% {
+        right: 20%;
+        bottom: -10px;
+    }
+    25% {
+        right: 80%;
+        bottom: -10px;
+    }
+    45% {
+        right: 80%;
+        bottom: 90%;
+    }
+    70% {
+        right: -10%;
+        bottom: 90%;
+    }
+    90% {
+        right: -10%;
+        bottom: -10px;
+
+    100% {
+        right: 20%;
+        bottom: -10px;
+    }
+}
